feedly.css
/* ... */
#floatingTitle > :first-child > *,
#floatingTitle > .scoreWrap img,
.cdm .cdmHeader > :first-child > *,
.cdm .cdmHeader > .scoreWrap img,
.hl .hlLeft > *,
.hl .hlRight img {
	display: none;
	float: right;
	margin: 0 6px;
}
#ttrssMain .tinyFeedIcon,
#floatingTitle > :first-child > *,
#floatingTitle > .scoreWrap img,
.cdm.expanded .cdmHeader > :first-child > *,
.cdm.expanded .cdmHeader > .scoreWrap img,
.cdm.expandable.active .cdmHeader > :first-child > *,
.cdm.expandable.active .cdmHeader > .scoreWrap img,
.cdm.expandable:not(.active):hover .cdmHeader > :first-child > *,
.cdm.expandable:not(.active):hover .cdmHeader > .scoreWrap img,
.hl:hover .hlLeft > *,
.hl:hover .hlRight img,
.cdm.expandable.marked img[src*='images/mark_set'],
.hl.marked img[src*='images/mark_set'],
.cdm.expandable.published .pubPic,
.hl.published .pubPic,
.cdm.expandable.Selected .rchk,
.hl.Selected .rchk {
	display: inline-block;
	vertical-align: middle;
}
#floatingTitle > :first-child > .pubPic,
.cdm.expandable:not(.active):hover .cdmHeader > :first-child > .pubPic,
.hl:hover > .hlLeft > .pubPic {
	margin-left: 33px;
}
#floatingTitle > .scoreWrap > .hlScorePic,
.cdm.expandable:not(.active) .cdmHeader > .scoreWrap > .hlScorePic,
.hl > .hlRight > .hlScorePic {
	position: absolute;
	right: 83px;
}
.cdm.expandable:not(.active):hover .updated,
.hl:hover .hlUpdated {
	display: none;
}
#headlines-frame.wide .hl:hover > * {
	background: transparent; /* only .hlTitle should have background color (next rule) */
}
.cdm.expandable:not(.active):hover .cdmHeader,
.hl:hover > *,
#headlines-frame.wide .hl:hover > .hlTitle,
.collapseBtn:hover {
	background: rgba(0,0,0,.033);
	cursor: pointer;
}
.cdm.expandable.marked:not(.active),
.hl.marked {
	z-index: 2;
	border-color: #bbe1b6;
	background: #eefae9;
}
.cdm.expandable.published:not(.active),
.hl.published {
	z-index: 2;
	border-color: #fcb;
	background: #fff2dd;
}
.cdm.expandable.Selected:not(.active),
.hl.Selected {
	z-index: 2;
	border-color: #eda;
	background: #fffad4;
}

/* single-line previews */
#floatingTitle .titleWrap,
.cdm.expandable:not(.active) .titleWrap,
.hlTitle {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}
#headlines-frame.wide .hl {
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
}
#headlines-frame.wide .hl:before {
	content: "";
	display: block; /* IE fix */
	/* old flexbox: */
	-moz-box-flex: 1;
	-webkit-box-flex: 1;
	-ms-flex: 99;
	-moz-box-ordinal-group: 3;
	-webkit-box-ordinal-group: 3;
	-ms-flex-order: 3;
	/* new flexbox: */
	-webkit-flex: 99;
	flex: 99;
	-webkit-order: 3;
	order: 3;
}
#headlines-frame.wide .hl > .hlTitle {
	white-space: normal;
	width: 100%;
	margin-top: -30px;
	padding-top: 30px;
	/* old flexbox: */
	-moz-box-flex: 1;
	-webkit-box-flex: 1;
	-ms-flex: 100% 1;
	-moz-box-ordinal-group: 4;
	-webkit-box-ordinal-group: 4;
	-ms-flex-order: 4;
	/* new flexbox: */
	-webkit-flex: 100% 1;
	flex: 100% 1;
	-webkit-order: 4;
	order: 4;
}

/* articles - expanded */
.cdm.expandable.active,
.cdm.expanded {
	overflow: hidden;
	margin-bottom: 17px;
	border: 1px solid #eee;
}
.cdm.expandable.active .cdmExcerpt {
	display: none;
}
.cdm.expandable.active .cdmHeader,
.cdm.expanded .cdmHeader {
	padding: 53px 33px 0;
}
.cdmFooter {
	clear: both;
	padding: 0 33px 33px;
}
.cdm.expandable.active .cdmHeader .titleWrap,
.cdm.expanded .cdmHeader > .titleWrap {
	padding: 0;
}
.cdm.expandable.active .title,
.cdm.expanded .title {
	font: normal normal bold 24px/28px SansCn;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
}
.cdm.expandable.active .title:after,
.cdm.expanded .title:after {
	display: table;
	clear: both;
	margin-top: 5px;
	content: " ";
}
.cdm.expandable.active .cdmHeader > :first-child,
.cdm.expandable.active .cdmHeader .hlFeed,
.cdm.expandable.active .cdmHeader .updated,
.cdm.expandable.active .cdmHeader .scoreWrap > *,
.cdm.expanded .cdmHeader > :first-child,
.cdm.expanded .cdmHeader .hlFeed,
.cdm.expanded .cdmHeader .updated,
.cdm.expanded .cdmHeader .scoreWrap > * {
	position: absolute;
	top: 33px;
}
.cdm.expandable.active .cdmHeader .scoreWrap > span,
.cdm.expanded .cdmHeader .scoreWrap > span {
	left: 27px;
}
.cdm.expandable.active .cdmHeader .hlFeed,
.cdm.expanded .cdmHeader .hlFeed {
	left: 55px;
}
.cdm.expandable.active .cdmHeader .updated,
.cdm.expanded .cdmHeader .updated {
	right: 116px;
}
.cdm.expandable.active .cdmHeader .scoreWrap > .hlScorePic,
.cdm.expanded .cdmHeader .scoreWrap > .hlScorePic {
	right: 82px;
}
.cdm.expandable.active .cdmHeader > :first-child,
.cdm.expanded .cdmHeader > :first-child {
	right: 27px;
}

/* articles - common */
div.articleNote {
	margin: 5px 33px;
	border-radius: 0;
}
.cdm,
.hl {
	position: relative;
}
.cdm.expanded.active,
.cdm.expandable.active {
	z-index: 1;
	border-color: #d4d4d4;
}
.cdm .title,
.hlContent  {
	font-weight: bold;
	font-size: 13px;
}
.cdm .cdmExcerpt,
.cdm.expandable .author,
.cdm.expanded .author,
.hlContent .contentPreview {
	font-weight: normal;
	font-size: 11px;
}
#floatingTitle,
.cdm .title,
.cdm .cdmHeader,
.hl,
.hl a,
.hl.Unread .contentPreview {
	color: #909090;
}
#floatingTitle.Unread .title,
.cdm.Unread .title,
.hl.Unread .hlContent a,
.postHeader .postTitle a {
	color: #444;
}
.cdm .title,
.hlContent a {
	text-decoration: none;
}
#floatingTitle img,
.cdmHeader img,
.cdmFooter img,
.hl img,
.postTags img {
	margin: 0 0 0 5px;
	vertical-align: middle;
}
#floatingTitle > div,
#floatingTitle .updated,
.cdmHeader > div,
.cdmHeader .updated,
.hlLeft,
.hlUpdated,
.hlRight,
.hlFeed,
.author {
	white-space: nowrap;
}
#floatingTitle .titleWrap,
.cdmHeader .titleWrap,
.hlTitle {
	min-height: 16px;
	line-height: 14px;
}
#floatingTitle .updated,
.cdmHeader .updated,
.cdmHeader .hlFeed,
.hl > .hlFeed,
.hlUpdated {
	font-size: 11px;
}
/* ... */

